# recipe-db

./: .gitignore  README.md  config.py  db.sqlite  entry.cpp  entry.hpp  file  file.txt  file_io.cpp  file_io.h  file_io.hpp  file_io_tests.cpp  file_with_headers.txt  main  main.cpp  makefile  ml_test.py  parse_ingredients.py  parse_text.py  pyproject.toml  recipes.txt  record.cpp  record.hpp  record_tests.cpp  setup.cfg  setup.py  test  test.txt  test_config.py
app/: __init__.py  auth.py  db.py  forms.py  home.py  recipe.py  schema.sql  user.py
app/static/: form_style.css  nav_style.css  style1.css
app/templates/: base.html
flaskr/: __init__.py  auth.py  blog.py  db.py  home.py  model.py  recipe.py  schema.sql  user.py
flaskr.egg-info/: SOURCES.txt
flaskr/static/: style1.css
htmlcov/: flaskr___init___py.html  flaskr_auth_py.html  flaskr_blog_py.html  flaskr_db_py.html  index.html  status.json
instance/: flaskr.sqlite
python/: gui.py  main.py  parser.py  recipe_db.py  recipes.txt
recipe_db/: __init__.py  auth.py  config.py  db.py  gui.py  home.py  parser.py  recipe.py  test_schema.sql  user.py
recipes/: butternut_squash_sage_risotto.txt  chicken_saag.txt  chickpea_pesto_risotto.txt  courgette_carbonara.txt  db_generate_sql.py  db_import_recipes.py  db_parse.py  db_parse_bulk.py  leek_fondue_linguine.txt  marmite_mac_cheese.txt  new_test_schema.sql  parse_ingredients.py  red_lentil_aubergine.txt  test.py  test_schema.sql  tomato_olive_paella.txt
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_home.py
(+46 files in other folders)
