[project]
name = "recipe_db"
version = "1.0.1"
description = "Recipe database app"
dependencies = [
    "flask",
    "flask-wtf"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]